# galactic

./: Cargo.toml  setup
Core Libs/Algorithms/src/: buffers.rs  lib.rs  sync.rs
Core Libs/Algorithms/src/video/: color.rs  mod.rs  mode.rs
Core Libs/PS 2/: Cargo.toml
Core Libs/PS 2/src/: lib.rs
Core Libs/Vga/: Cargo.toml
Core Libs/Vga/src/: lib.rs  registers.rs
Core Libs/Vga/src/screen/: buffer.rs  mod.rs
Core Libs/X86_64/: Cargo.toml
Core Libs/X86_64/src/: lib.rs  pages.rs  tables.rs
Manage/: Cargo.toml
Manage/src/: help message correct.txt  help message.txt  image.rs  logger.rs  main.rs  opt.rs  units.rs
Sodalite/: Cargo.toml
Sodalite/X86_64/: bootsector.asm  link.ld  rust-entry.asm
Sodalite/src/: lib.rs  video.rs
Sodalite/src/x86_64/: interrupts.rs  mod.rs
